syntax = "proto3";
package support;
option java_package = "bisq.support.protobuf";
option java_multiple_files = true;
import "user.proto";
import "chat.proto";
import "offer.proto";

message MediationRequest {
  offer.Offer bisqEasyOffer = 1;
  user.UserProfile requester = 2;
  user.UserProfile peer = 3;
  repeated chat.ChatMessage chatMessages = 4;
}

message MediationResponse {
  offer.Offer bisqEasyOffer = 1;
}

enum AlertType {
  INFO = 0;
  WARN = 1;
  EMERGENCY = 2;
  BAN = 3;
}

message AuthorizedAlertData {
  string id = 1;
  sint64 date = 2;
  AlertType alertType = 3;
  optional string message = 4;
  optional string minVersion = 5;
  optional string bannedRoleProfileId = 6;
  bool haltTrading = 7;
  bool requireVersionForTrading = 8;
}